[gd_scene load_steps=2 format=3 uid="uid://dnx2uoqhhj1xf"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_tuvlr"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tuvlr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.564706)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -67.0
offset_right = 94.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="FOVContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FOVLabel" type="Label" parent="VBoxContainer/FOVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "FOV:"

[node name="FOVSlider" type="HSlider" parent="VBoxContainer/FOVContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 60.0
max_value = 120.0
step = 5.0
value = 75.0

[node name="FOVValue" type="Label" parent="VBoxContainer/FOVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "75"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/FOVContainer/FOVSlider" to="." method="_on_fov_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]